--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Karta s jménem a příjmením -->
         <div class="col-md-6">
             <div class="card mb-4 mx-auto shadow-sm bg-light" style="max-width: 20rem;">
-                <img src="pslib-cz/2023-e2a-cscportfolio-erik-sliacky/Image.jpg" class="card-img-top mx-auto mt-4 rounded" alt="foto" style="width: 150px; height: 200px; object-fit: cover;">
+                <img src="Image.jpg" class="card-img-top mx-auto mt-4 rounded" alt="foto" style="width: 150px; height: 200px; object-fit: cover;">
                 <div class="card-body text-center">
                  <h2 class="card-title"><span style="color: gray;">Erik</span> <span style="color: darkblue;">Sliacky</span></h2>
                  <div class="card-text">Vítejte na mé portfolio stránce.</div>
