--- a/index.html
+++ b/index.html
@@ -46,16 +46,9 @@
             <ul class="list-group">
               <!-- Seznam odkazů -->
             <li class="list-group-item bg-light"></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">9</a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">8</a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">7</a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">6 </a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">5</a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">4</a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">3</a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">2</a></li>
-              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">1</a></li>
-              <li class="list-group-item bg-light"></li>
+              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">https://github.com/pslib-cz/2023-e2a-cscpowerconduct-erik-sliacky.git</a></li>
+              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">https://github.com/pslib-cz/2023-e2a-csccomplexnumberconverter-erik-sliacky.git</a></li>
+              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">https://github.com/pslib-cz/2023-e2a-cscintfloatdoublefor-erik-sliacky.git</a></li>
             </ul>
         </div>
     </div>
