--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">https://github.com/pslib-cz/2023-e2a-cscpowerconduct-erik-sliacky.git</a></li>
               <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">https://github.com/pslib-cz/2023-e2a-csccomplexnumberconverter-erik-sliacky.git</a></li>
               <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">https://github.com/pslib-cz/2023-e2a-cscintfloatdoublefor-erik-sliacky.git</a></li>
+              <li class="list-group-item zoh"><a href="https://github.com/pslib-cz/" class="text-decoration-none">https://github.com/pslib-cz/2023-e2a-cscfuncalculator-erik-sliacky.git</a></li>
             </ul>
         </div>
     </div>
